CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(netshims)
INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src DIR_SRCS)
LINK_DIRECTORIES(lib)
FILE(GLOB_RECURSE CURRENT_HEADERS  *.h *.hpp)
SOURCE_GROUP("Header Files" FILES ${CURRENT_HEADERS})
ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS} ${CURRENT_HEADERS})


